--- a/src/assets/scss/_variarbles.scss
+++ b/src/assets/scss/_variarbles.scss
@@ -6,4 +6,5 @@
   ),
 );
 
-@use 'element-plus/theme-chalk/src/index.scss' as *
+@use 'element-plus/theme-chalk/src/index.scss' as *;
+@use 'element-plus/theme-chalk/src/dark/css-vars.scss' as *
