--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -5,10 +5,21 @@ body,
 #app,
 .poster-layout,
 .poster-content {
-  @apply h-full overflow-hidden;
+  @apply h-full text-black overflow-hidden;
 }
 
 ::-webkit-scrollbar {
   @apply hidden;
 }
 
+.poster-button {
+  @apply flex disabled:cursor-not-allowed disabled:opacity-60;
+
+  + .poster-button {
+    @apply ml-3;
+  }
+}
+
+.el-divider {
+  @apply border-black mx-3;
+}
